# meshtastic-monitor

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-build.yml
deploy/: .env.pi.example  collector.env.example  docker-compose.pi.yml  meshtastic-collector.service  meshtastic-sync.service  pi-setup.sh  sync.env.example
docs/: architecture.md
mesh_monitor/: __init__.py  __main__.py  cli.py  collector.py  config.py  db.py  sync.py
scripts/: capture_screenshots.py  seed_mock_data.py
synology/: .env.example  docker-compose.yml  schema.sql
synology/sync_api/: Dockerfile  app.py
synology/web/: Dockerfile  app.py
synology/web/templates/: base.html  dashboard.html  map.html  node_detail.html
tests/: __init__.py  test_cli.py  test_collector.py  test_db.py  test_web.py
web/: __init__.py  app.py
web/templates/: 404.html  base.html  dashboard.html  map.html  messages.html  node_detail.html  nodes.html
