[project]
name = "meshtastic-monitor"
version = "0.1.0"
description = "Monitor Meshtastic mesh networks with CLI and Web UI"
authors = [{name = "Ryan Niemes"}]
requires-python = ">=3.9"
dependencies = [
    "meshtastic>=2.3.0",
    "click>=8.1.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
mesh-monitor = "mesh_monitor.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mesh_monitor", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=mesh_monitor --cov=web --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "W"]
ignore = []
